--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "inverted-index",
-  "version": "1.0.0",
-  "description": "object that takes a JSON array of text objects and creates an index from the array",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "node node_modules/bin/gulp test",
-    "coverage": "NODE_ENV=test istanbul cover --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andela-Bgathu/inverted-index.git"
-  },
-  "author": "Andela-Bgathu",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/andela-Bgathu/inverted-index/issues"
-  },
-  "homepage": "https://github.com/andela-Bgathu/inverted-index#readme",
-  "devDependencies": {
-    "browser-sync": "^2.18.5",
-    "coveralls": "^2.11.15",
-    "gulp": "^3.9.1",
-    "gulp-jasmine": "^2.4.2",
-    "gulp-sass": "^3.0.0",
-    "istanbul": "^0.4.5"
-  }
+    "name": "inverted-index",
+    "version": "1.0.0",
+    "description": "object that takes a JSON array of text objects and creates an index from the array",
+    "main": "gulpfile.js",
+    "scripts": {
+        "test": "node node_modules/.bin/gulp test",
+        "coverage": "NODE_ENV=test istanbul cover --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/andela-Bgathu/inverted-index.git"
+    },
+    "author": "Andela-Bgathu",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/andela-Bgathu/inverted-index/issues"
+    },
+    "homepage": "https://github.com/andela-Bgathu/inverted-index#readme",
+    "devDependencies": {
+        "browser-sync": "^2.18.5",
+        "coveralls": "^2.11.15",
+        "gulp": "^3.9.1",
+        "gulp-jasmine": "^2.4.2",
+        "gulp-sass": "^3.0.0",
+        "istanbul": "^0.4.5"
+    }
 }
