--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp": "^3.9.1",
     "gulp-jasmine": "^2.4.2",
     "gulp-jshint": "^2.0.4",
+    "gulp-open": "^2.0.0",
     "gulp-sass": "^3.0.0",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.4"
