--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - stable
-
+  - "6"
 after_script:
-  - npm run coverage
+  - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
+after_success: 'npm run coverage'
