--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "gulpfile.js",
     "scripts": {
         "test": "./node_modules/istanbul/lib/cli.js cover node ./node_modules/.bin/gulp test",
-        "coverage":"cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+        "coverage":"cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
     },
     "repository": {
         "type": "git",
