--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "jshint": "^2.9.4"
   },
   "dependencies": {
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "jasmine": "^2.5.3"
   }
 }
