feature(docker-auto-build): configure travis to trigger dockerhub build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ after_script:
   - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
 after_success: 
   - npm run coverage
+after_deploy:
   - $DOCKER_BUILD_TRIGGER 
